[style] Fix video cropping issue on mobile

--- a/src/assets/scss/blocks/_image-gallery.scss
+++ b/src/assets/scss/blocks/_image-gallery.scss
@@ -7,7 +7,14 @@
 
 	& :is(img, video) {
 		width: 100%;
+	}
+
+	& img {
 		object-fit: cover;
+	}
+
+	& video {
+		height: auto;
 	}
 
 	& :is(picture, a:not(figcaption > a)) {
